--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "require": {
 	    "php": ">=5.3",
         "swiftmailer/swiftmailer": "^6.0",
-		"symfony/http-foundation": "^2.0",
+		"symfony/http-foundation": "^2.0"
     },
 	"autoload": {
         "psr-0": {
             "Poznet\\Tools": "src"
-    }
+        }
 	},
     "license": "MIT",
     "authors": [
