--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pozyc/tools",
+    "name": "poznet/tools",
     "description": "Tools for  legacy projects",
 	"keywords": ["swiftmailer","google captcha"],
 	"homepage": "https://github.com/poznet/tools",
